crates/sui/src/unit_tests/snapshots/sui__upgrade_compatibility__upgrade_compatibility_tests__function_signature.snap
---
source: crates/sui/src/unit_tests/upgrade_compatibility_tests.rs
expression: err.to_string()
---
error: Function signature mismatch
  ┌─ /Users/jordanjennings/code/sui/crates/sui/src/unit_tests/fixtures/upgrade_errors/function_signature_v2/sources/UpgradeErrors.move:9:38
  │
9 │     public fun func_with_wrong_param(a: u32): u64 {
  │                                      ^ Function 'func_with_wrong_param' unexpected parameter u32 at position 0, expected u64
  │
  = Functions are part of a module's public interface and cannot be changed during an upgrade, restore the original function's parameters for function 'func_with_wrong_param'.

error: Function signature mismatch
   ┌─ /Users/jordanjennings/code/sui/crates/sui/src/unit_tests/fixtures/upgrade_errors/function_signature_v2/sources/UpgradeErrors.move:13:42
   │
13 │     public fun func_with_wrong_return(): u32 {
   │                                          ^^^ Module 'upgrades' function 'func_with_wrong_return' has an unexpected return type u32, expected u64
   │
   = Functions are part of a module's public interface and cannot be changed during an upgrade, restore the original function's return types for function 'func_with_wrong_return'.

error: Function signature mismatch
   ┌─ /Users/jordanjennings/code/sui/crates/sui/src/unit_tests/fixtures/upgrade_errors/function_signature_v2/sources/UpgradeErrors.move:17:49
   │
17 │     public fun func_with_wrong_param_and_return(a: u32): u32 {
   │                                                 ^ Function 'func_with_wrong_param_and_return' unexpected parameter u32 at position 0, expected u64
   │
   = Functions are part of a module's public interface and cannot be changed during an upgrade, restore the original function's parameters for function 'func_with_wrong_param_and_return'.

error: Function signature mismatch
   ┌─ /Users/jordanjennings/code/sui/crates/sui/src/unit_tests/fixtures/upgrade_errors/function_signature_v2/sources/UpgradeErrors.move:17:58
   │
17 │     public fun func_with_wrong_param_and_return(a: u32): u32 {
   │                                                          ^^^ Module 'upgrades' function 'func_with_wrong_param_and_return' has an unexpected return type u32, expected u64
   │
   = Functions are part of a module's public interface and cannot be changed during an upgrade, restore the original function's return types for function 'func_with_wrong_param_and_return'.

error: Function signature mismatch
   ┌─ /Users/jordanjennings/code/sui/crates/sui/src/unit_tests/fixtures/upgrade_errors/function_signature_v2/sources/UpgradeErrors.move:21:16
   │
21 │     public fun func_with_wrong_param_length(a: u64): u64 {
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Function 'func_with_wrong_param_length' expected 2 parameters, have 1
   │
   = Functions are part of a module's public interface and cannot be changed during an upgrade, restore the original function's parameters for function 'func_with_wrong_param_length', expected 2 parameters.

error: Function signature mismatch
   ┌─ /Users/jordanjennings/code/sui/crates/sui/src/unit_tests/fixtures/upgrade_errors/function_signature_v2/sources/UpgradeErrors.move:25:16
   │
25 │     public fun func_with_wrong_return_length(): u64 {
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Function 'func_with_wrong_return_length' expected to have 2 return type(s), have 1
   │
   = Functions are part of a module's public interface and cannot be changed during an upgrade, restore the original function's return types for function 'func_with_wrong_return_length'.


Upgrade failed, this package requires changes to be compatible with the existing package. It's upgrade policy is set to 'Compatible'.
